@@ -1,2 +1,4 @@
 CHANGELOG
 =====================================================
+
+2019-07-24: Initial commit. Added JS code and Tests.
